--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 	<footer>
 			<nav1>
 				<ul>
-					<center><li1><a href="index.html.html" style="text-decoration:none;color:black;">HOME</a></li1>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+					<center><li1><a href="index.html" style="text-decoration:none;color:black;">HOME</a></li1>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 					<li1><a href="aboutus.html" style="text-decoration:none;color:black;">ABOUT US</a></li1>
 					</center>
 				</ul>
